@@ -1,2 +1,2 @@
-Kinect 3D Video Capture Project 3.4
-release date 01/30/2018
+Kinect 3D Video Capture Project 3.5
+release date 04/20/2018
